feat: add upload comment image functionality
